# coursework_7

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
habitsapp/: apps.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
usersapp/: admin.py  models.py  serializers.py  urls.py  views.py
